Add Progress Bar

--- a/src/app/signup/personal/personal.component.html
+++ b/src/app/signup/personal/personal.component.html
@@ -1,4 +1,4 @@
-<fieldset>
+<form [formGroup]="_formGroup">
     <div class="form-card">
         <div class="row">
             <div class="col-7">
@@ -19,4 +19,4 @@
     </div> 
     <input type="button" name="next" class="next action-button" value="Next" (click)="nextButton()" />
     <input type="button" name="previous" class="previous action-button-previous" value="Previous" (click)="prevButton()" />
-</fieldset>
+</form>
