--- a/src/app/signup/account/account.component.html
+++ b/src/app/signup/account/account.component.html
@@ -1,4 +1,4 @@
-<form #formPersonal [formGroup]="_formGroup" id="input" >
+<form [formGroup]="_formGroup" id="input" >
     <div class="form-card">
         <div class="row">
             <div class="col-7">
