--- a/src/app/signup/_component/progressbar/progressbar.component.html
+++ b/src/app/signup/_component/progressbar/progressbar.component.html
@@ -5,4 +5,4 @@
     <li id="payment"><strong>Image</strong></li>
     <li id="confirm"><strong>Finish</strong></li>
 </ul>
-<ngb-progressbar [value]="percentBar" type="info"></ngb-progressbar>
+<ngb-progressbar [value]="progressNumber" type="info"></ngb-progressbar>
