--- a/src/app/signup/_component/progressbar/progressbar.component.html
+++ b/src/app/signup/_component/progressbar/progressbar.component.html
@@ -6,3 +6,6 @@
     <li id="confirm"><strong>Finish</strong></li>
 </ul>
 <ngb-progressbar [value]="progressNumber" type="info"></ngb-progressbar>
+<div *ngIf="observable$ | async as observable;">
+    {{ observable }}
+</div>
