--- a/src/app/signup/image/image.component.html
+++ b/src/app/signup/image/image.component.html
@@ -11,7 +11,7 @@
         <label class="fieldlabels">Upload Your Photo:</label> 
         <input type="file" name="pic" accept="image/*"> 
         <label class="fieldlabels">Upload Signature Photo:</label> 
-        <input type="file" name="pic" accept="image/*">
+        <input type="file" name="sigpic" accept="image/*">
     </div> 
     <input type="button" name="next" class="next action-button" value="Submit" (click)="nextButton()" /> 
     <input type="button" name="previous" class="previous action-button-previous" value="Previous" (click)="prevButton()" />
