--- a/src/app/signup/image/image.component.html
+++ b/src/app/signup/image/image.component.html
@@ -1,4 +1,4 @@
-<fieldset>
+<form id="input">
     <div class="form-card">
         <div class="row">
             <div class="col-7">
@@ -15,4 +15,4 @@
     </div> 
     <input type="button" name="next" class="next action-button" value="Submit" (click)="nextButton()" /> 
     <input type="button" name="previous" class="previous action-button-previous" value="Previous" (click)="prevButton()" />
-</fieldset>
+</form>
