--- a/src/app/signup/personal/personal.component.html
+++ b/src/app/signup/personal/personal.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="_formGroup">
+<form [formGroup]="_formGroup" id="input">
     <div class="form-card">
         <div class="row">
             <div class="col-7">
