--- a/src/app/signup/success/success.component.html
+++ b/src/app/signup/success/success.component.html
@@ -1,4 +1,4 @@
-<fieldset>
+<form id="input">
     <div class="form-card">
         <div class="row">
             <div class="col-7">
@@ -18,4 +18,4 @@
             </div>
         </div>
     </div>
-</fieldset>
+</form>
