--- a/src/app/signup/personal/personal.component.html
+++ b/src/app/signup/personal/personal.component.html
@@ -9,13 +9,13 @@
             </div>
         </div> 
         <label class="fieldlabels">First Name: *</label> 
-        <input type="text" name="fname" placeholder="First Name" /> 
+        <input type="text" formControlName="fname" placeholder="First Name" /> 
         <label class="fieldlabels">Last Name: *</label>
-        <input type="text" name="lname" placeholder="Last Name" /> 
+        <input type="text" formControlName="lname" placeholder="Last Name" /> 
         <label class="fieldlabels">Contact No.: *</label> 
-        <input type="text" name="phno" placeholder="Contact No." /> 
+        <input type="text" formControlName="phno" placeholder="Contact No." /> 
         <label class="fieldlabels">Alternate Contact No.: *</label> 
-        <input type="text" name="phno_2" placeholder="Alternate Contact No." />
+        <input type="text" formControlName="phno_2" placeholder="Alternate Contact No." />
     </div> 
     <input type="button" name="next" class="next action-button" value="Next" (click)="nextButton()" />
     <input type="button" name="previous" class="previous action-button-previous" value="Previous" (click)="prevButton()" />
