update app module

--- a/src/app/signup/success/success.component.html
+++ b/src/app/signup/success/success.component.html
@@ -1,22 +1,37 @@
-<form id="input">
+<div id="input">
     <div class="form-card">
         <div class="row">
             <div class="col-7">
-                <h2 class="fs-title">Finish:</h2>
+                <h2 class="fs-title"> Preview :</h2>
             </div>
             <div class="col-5">
                 <h2 class="steps">Step 4 - 4</h2>
             </div>
-        </div> <br><br>
-        <h2 class="purple-text text-center"><strong>SUCCESS !</strong></h2> <br>
-        <div class="row justify-content-center">
-            <div class="col-3"> <img src="https://i.imgur.com/GwStPmg.png" class="fit-image"> </div>
-        </div> <br><br>
-        <div class="row justify-content-center">
-            <div class="col-7 text-center">
-                <h5 class="purple-text text-center">You Have Successfully Signed Up</h5>
-            </div>
+        </div>  <br>
+        <div class="row">
+            <label for=""> Email : </label> 
+            <p class="col-12"> ihwan.mualana@students.amikom.ac.id </p>
+        </div>
+        <div class="row">
+            <label for=""> Username : </label>
+            <p class="col-12"> lana404 </p>
+        </div>
+        <div class="row">
+            <label for=""> Password : </label>
+            <p class="col-12"> t3sting </p>
+        </div>
+        <div class="row">
+            <label for=""> Nama : </label>
+            <p class="col-12"> Ihwan Mualana </p>
+        </div>
+        <div class="row">
+            <label for=""> Contact No.: </label>
+            <p class="col-12"> 080000000000 </p>
+        </div>
+        <div class="row">
+            <label for=""> Alternate Contact : </label>
+            <p class="col-12"> 09900989 </p>
         </div>
     </div>
-</form>
-<button type="button" class="btn btn-dark"> Lihat Data </button>
+    <button type="button" class="btn btn-dark btn-preview action-button" (click)="previewButton()"> Edit Data </button>
+</div>
