--- a/src/assets/_formDaftar.scss
+++ b/src/assets/_formDaftar.scss
@@ -1,4 +1,4 @@
-form#input {
+#input {
     background: white;
     border: 0 none;
     border-radius: 0.5rem;
@@ -27,6 +27,7 @@ form#input {
 }
 
 .form-card {
+    margin-top: 10px;
     text-align: left
 }
 
