--- a/src/app/signup/_component/progressbar/progressbar.component.html
+++ b/src/app/signup/_component/progressbar/progressbar.component.html
@@ -1,8 +1,8 @@
 <!-- progressbar -->
-<ul id="progress-bar">
-    <li class="active" id="account"><strong>Account</strong></li>
-    <li id="personal"><strong>Personal</strong></li>
-    <li id="payment"><strong>Image</strong></li>
-    <li id="confirm"><strong>Finish</strong></li>
+<ul #ulist id="progress-bar">
+    <li class="" id="account"><strong>Account</strong></li>
+    <li class="" id="personal"><strong>Personal</strong></li>
+    <li class="" id="payment"><strong>Image</strong></li>
+    <li class="" id="confirm"><strong> Preview </strong></li>
 </ul>
 <ngb-progressbar [value]="progressNumber" type="info"></ngb-progressbar>
