--- a/src/app/signup/_component/progressbar/progressbar.component.scss
+++ b/src/app/signup/_component/progressbar/progressbar.component.scss
@@ -2,6 +2,8 @@
     margin-bottom: 30px;
     overflow: hidden;
     color: lightgrey;
+    width: 100%;
+    padding: 0;
 
     .active {
         color: #673AB7
