--- a/src/app/signup/account/account.component.html
+++ b/src/app/signup/account/account.component.html
@@ -19,3 +19,5 @@
     </div> 
     <input #nextBt type="button" name="next" class="next action-button" value="Next" (click)="nextButton()"/>
 </form>
+
+<app-toastr></app-toastr>
