--- a/src/app/signup/account/account.component.html
+++ b/src/app/signup/account/account.component.html
@@ -20,4 +20,4 @@
     <input #nextBt type="button" name="next" class="next action-button" value="Next" (click)="nextButton()"/>
 </form>
 
-<app-toastr></app-toastr>
+<app-toastr aria-live="polite" aria-atomic="true"></app-toastr>
