--- a/src/app/signup/personal/personal.component.html
+++ b/src/app/signup/personal/personal.component.html
@@ -21,4 +21,4 @@
     <input type="button" name="previous" class="previous action-button-previous" value="Previous" (click)="prevButton()" />
 </form>
 
-<app-toastr></app-toastr>
+<app-toastr aria-live="polite" aria-atomic="true"></app-toastr>
