--- a/src/app/signup/_component/progressbar/progressbar.component.scss
+++ b/src/app/signup/_component/progressbar/progressbar.component.scss
@@ -15,9 +15,18 @@
         width: 25%;
         float: left;
         position: relative;
-        font-weight: 400
-    }
+        font-weight: 400;
 
+        a {
+            text-decoration: none;
+            color: #673AB7;
+
+            &:hover {
+                color: #673AF0;
+            }
+        }
+    }
+    
     #account:before {
         font-family: FontAwesome;
         content: "\f13e"
